<resources>
    <string name="app_name">DriverUI</string>
    <string name="title_activity_maps">DriverUI</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer_menu">DrawerMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="request_go">Awami Go</string>
    <string name="where_to">Where to?</string>
    <string name="lets_start_moving">Lets Start Moving</string>
    <string name="country_code">+92</string>
    <string name="enter_your_mobile">Enter your mobile</string>
    <string name="number">Number</string>
    <string name="connect_with_social">Or Connect with social</string>
    <string name="enter_your_full_name">   Enter Your Full Name   </string>
    <string name="Fname">First Name</string>
    <string name="Lname">Last Name</string>
    <string name="submit">Submit</string>
    <string name="default_user_name">Mr.Akhter Hussain</string>
    <string name="do_you_awamiswari_for_business">Do you AwamiSawari for business?</string>
    <string name="to_create_your_business_profile">Tap to create your business profile</string>
    <string name="enter_your_mobile_no">Enter Your Mobile Numbe</string>
    <string name="enter_4digit_code">Enter 4-digit code sent </string>
    <string name="sent_to_you_at">to you at 03015857307</string>
    <string name="resend_code_in">Resend code in 00:14</string>
    <string name="network_not_available">Network not available</string>
    <string name="accept_btn">Accept</string>
    <string name="reject_btn">Reject</string>

    <string name="action_settings">Settings</string>
    <string name="login_credentials">Login Credentials</string>
    <string name="ride_now">Ride now</string>
    <string name="ride_later">Ride later</string>
    <string name="add_detail">Add details</string>
    <string name="detail">use my pin location...</string>
    <string name="dropoff_fare_estimate">Dropoff-Fare estimate</string>
    <string name="Lahore">Lahore</string>
    <string name="pickup_location">Add your pick-up location details for the Pilot</string>
    <string name="promo_code">Add your promo code here to unlock special offers and discounted fares</string>
    <string name="call_pilot">Call the Pilot</string>
    <string name="sms_pilot">SMS the Pilot</string>
    <string name="close">Close</string>

    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="pickup_point">Pickup point</string>
    <string name="driver_name">Driver name</string>
    <string name="location_details">Pickup point details</string>
    <string name="call_btn">Call</string>
    <string name="text_btn">Text</string>
    <string-array name="city_array">
        <item>Sialkot</item>
        <item>Islamabad</item>
        <item>Sahiwal</item>
        <item>Okara</item>
        <item>Gujrat</item>
        <item>Lahore</item>
        <item>Gujranwala</item>

    </string-array>
</resources>
