<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.7"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_weight="5">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_full_name"
            android:textColor="#000000"
            android:textSize="20sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fname"
            android:inputType="textPersonName"
            android:hint="@string/Fname"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Lname"
            android:inputType="textPersonName"
            android:id="@+id/lname"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="#000000"
            android:textColor="#ffffff"
            android:textStyle="bold"
            />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/progressbar"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
</LinearLayout>