<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pickup_point"
            android:padding="15dp"
            android:id="@+id/pickup_point"
            android:background="#dcdcdc"
            android:textAlignment="center"
            />
    </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_"
                android:text="@string/accept_btn"
                android:textColor="#ffffff"
                android:id="@+id/accept_btn"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_"
                android:text="@string/reject_btn"
                android:textColor="#ffffff"
                android:id="@+id/reject_btn"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_margin="10dp"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>