<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bgLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.iqraa.driverui.MapsActivity"

    android:statusBarColor="@android:color/transparent">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/down"
            android:id="@+id/down_arrow"
            android:padding="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/detail">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/driver_name"
                android:textAllCaps="false"
                android:textSize="16dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="#ffffff"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pickup_point"
                android:textAllCaps="false"
                android:textSize="16dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="#ffffff"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/up"
                android:id="@+id/up_arrow"
                />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Notify"
                android:textAllCaps="false"
                android:background="@drawable/btn_"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
               android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginBottom="45dp"
                />
            </ScrollView>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottom_sheet2"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:clipToPadding="true"
        android:background="#ffffff"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/up"
                android:id="@+id/bottom_icon"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/driver_name"
                android:textAllCaps="false"
                android:padding="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pickup_point"
               android:padding="16dp"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_details"
                android:padding="16dp"
                android:textSize="16sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_btn"
                    android:id="@+id/call_btn"
                    android:paddingLeft="35dp"
                    android:paddingRight="35dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:background="@drawable/btn_"
                    android:textColor="#ffffff"
                    android:textStyle="bold"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_btn"
                    android:id="@+id/text_btn"
                    android:layout_marginLeft="30dp"
                    android:paddingLeft="35dp"
                    android:paddingRight="35dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:background="@drawable/btn_"
                    android:textColor="#ffffff"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

