<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ba"
        android:id="@+id/back"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_4digit_code"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#000000"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sent_to_you_at"
        android:id="@+id/number"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="#000000"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="1"
            android:id="@+id/one"
            android:focusable="true"
            android:hint="0"
            android:inputType="phone"
            android:maxLength="1"
            android:maxLines="1"
            android:textSize="25sp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/two"
            android:layout_marginStart="5dp"
            android:textSize="25sp"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="1"
            android:ems="1"
            android:focusable="true"
            android:hint="0"
            android:layout_marginLeft="0dp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:id="@+id/three"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="1"
            android:textSize="25sp"
            android:hint="0"
            android:focusable="true"
            android:ems="1"
            android:layout_marginLeft="0dp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:inputType="phone"
            android:maxLines="1"
            android:id="@+id/four"
            android:maxLength="1"
            android:focusable="true"
            android:textSize="25sp"
            android:hint="0"
            android:ems="1"
            android:layout_marginLeft="0dp" />

    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/progressbar"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_code_in"
            android:textSize="15sp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="0dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next"
            android:id="@+id/forward"
            android:layout_marginLeft="40dp"/>
    </LinearLayout>
</LinearLayout>